# tscg

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  TSCG.slnx  _00_Demo-Poclet-Gallery.url  _00_run_Orchestrator.bat  _01_Rebuild_Solution.bat  _01_run_OntologyExplorer.bat  _Run_Poclet_Explorer .bat  _serve_index-html.bat  all_jsonld.txt  check_api.py  check_env.py  claude_setup.txt  create_RAG.py  create_RAG_README.txt  create_files_URIS.py  diagnostic_models.py  file-list.txt  files.txt  generate_file_list_URIs.bat  generate_files-txt.bat  generate_files-txt.sh  index.html  instances_md_full.txt  package-lock.json  package.json  query_RAG.py  root_package.json  styles.css  temp_ontology.ttl  tscg- github.url  verify_migration_report.txt  verify_output.txt
_archives/2026_06_15-19h24/instances/symbolic-system-grammars/TriskeleToolchain/crates/tsk-libc-gen/: Cargo.toml
_archives/2026_06_15-19h24/instances/symbolic-system-grammars/TriskeleToolchain/crates/tsk-link/: Cargo.toml
instances/symbolic-system-grammars/TriskeleToolchain/: CHANGES_v0324.md  CHANGES_v0325.md  Cargo.toml  DIY_Triskele_VM_AssDisass_Compiler.md  Deepseek_Feedback_README.md  FileTree_v020.md  HANDOVER_v0322.md  M0_TriskeleToolchain.jsonld  M0_TriskeleToolchain_README.md  PATCH_NOTES.md  PREREQUISITES.md  TriskeleASM_Specification.md  TriskeleDisASM_Specification.md  _01_Howto.txt  _02_run_pipeline.bat  build_log.txt  debug.txt  hello.ll  hello.tobj  hello.tvmx  hello_input.tvmx  migration_32_to_64_registers.md  pipeline_report.txt  reorganize_projects.py  run_all_tests.py  run_pipeline.py  test_minimal.wad  tsk-libc.tvml  update_toolchain.py
instances/symbolic-system-grammars/TriskeleToolchain/.cargo/: config.toml
instances/symbolic-system-grammars/TriskeleToolchain/_archives/: CLAUDE.md  HANDOVER_v0320.md  TriskeleToolchain_Handover_v0310.md  TriskeleToolchain_Handover_v0311.md  TriskeleToolchain_Handover_v0313.md  TriskeleToolchain_Handover_v0314b.md  TriskeleToolchain_Handover_v034.md  TriskeleToolchain_Handover_v035.md  TriskeleToolchain_Handover_v038.md  TriskeleToolchain_Handover_v039.md
instances/symbolic-system-grammars/TriskeleToolchain/_archives/2026_06_02-23h21/: TriskeleToolchain_Handover_v020.md  TriskeleToolchain_Handover_v050.md
instances/symbolic-system-grammars/TriskeleToolchain/_archives/crates_DeepSeek_Wolf3D_DOS/triskele-vm/: Cargo.toml
instances/symbolic-system-grammars/TriskeleToolchain/_archives/crates_DeepSeek_Wolf3D_DOS/tsk-asm/: Cargo.toml
instances/symbolic-system-grammars/TriskeleToolchain/_archives/crates_DeepSeek_Wolf3D_DOS/tsk-lib-dos-gen/: Cargo.toml
instances/symbolic-system-grammars/TriskeleToolchain/crates/: PATCH_NOTES.md
instances/symbolic-system-grammars/TriskeleToolchain/crates/triskele-common/: Cargo.toml
instances/symbolic-system-grammars/TriskeleToolchain/crates/triskele-common/src/: instr.rs  isa.rs  lib.rs  libc_symbols.rs
instances/symbolic-system-grammars/TriskeleToolchain/crates/triskele-vm/: Cargo.toml  build.rs
instances/symbolic-system-grammars/TriskeleToolchain/crates/triskele-vm-wasm/: Cargo.toml  README_WASM.md  hello.c  hello.ll
instances/symbolic-system-grammars/TriskeleToolchain/crates/triskele-vm-wasm/docs/: PORTING_PROGRESS.md
instances/symbolic-system-grammars/TriskeleToolchain/crates/triskele-vm-wasm/src/: lib.rs
instances/symbolic-system-grammars/TriskeleToolchain/crates/triskele-vm-wasm/www/: index.html  server.py  worker.js
instances/symbolic-system-grammars/TriskeleToolchain/crates/triskele-vm/src/: display.rs  host.rs  lib.rs  main.rs
instances/symbolic-system-grammars/TriskeleToolchain/crates/tsk-asm/src/: Cargo.toml  main.rs
instances/symbolic-system-grammars/TriskeleToolchain/crates/tsk-cc/: Cargo.toml
instances/symbolic-system-grammars/TriskeleToolchain/crates/tsk-cc/src/: codegen.rs  ir.rs  main.rs  parser.rs
instances/symbolic-system-grammars/TriskeleToolchain/crates/tsk-cc/tests/: wolf3d_sample.ll
instances/symbolic-system-grammars/TriskeleToolchain/crates/tsk-dbg/: Cargo.toml
instances/symbolic-system-grammars/TriskeleToolchain/crates/tsk-dbg/src/: session.rs
instances/symbolic-system-grammars/TriskeleToolchain/crates/tsk-link/src/: main.rs
instances/symbolic-system-grammars/TriskeleToolchain/crates/wolf3d-demo/src/: main.rs
instances/symbolic-system-grammars/TriskeleToolchain/docs/: Getting started - Rust Programming Language.url  Release 2.30.9 · libsdl-org-SDL.url  Releases · llvm-llvm-project.url
instances/symbolic-system-grammars/TriskeleToolchain/lib/samples/: dbg_test4.txt  test_main.ll  test_main.tobj  test_main.tvmx
instances/symbolic-system-grammars/TriskeleToolchain/projects/: ozkl-doomgeneric- Easily portable doom.url
instances/symbolic-system-grammars/TriskeleToolchain/projects/Tests_ZMachine/: README.txt
instances/symbolic-system-grammars/TriskeleToolchain/projects/Tests_ZMachine/hello/: hello.c  hello.tvmx
instances/symbolic-system-grammars/TriskeleToolchain/projects/Tests_ZMachine/hello_input/: hello_input.c  hello_input.l  hello_input.tob
instances/symbolic-system-grammars/TriskeleToolchain/projects/references/: 7 weirdest devices DOOM has been ported to that you can actually play.url  Can It Run Doom- An Archive of All Known Ports-.url
instances/symbolic-system-grammars/TriskeleToolchain/projects/wolfenstein3D/wolf3d/: pipeline.toml
instances/symbolic-system-grammars/TriskeleToolchain/specifications/: TriskeleLinker_Specification.md  TriskeleVM_Format_TVM.md  TriskeleVM_ISA_Reference_v020.md
instances/symbolic-system-grammars/TriskeleToolchain/src/: hello.tasm  hello.tvmx  sdl_test.tvmx  test_div.tasm  test_div.tvmx  test_shr.tvmx  wolf3d_drawtest.tvmx  wolf3d_raycaster.tvmx  wolf3d_raycaster_debug.tvmx  wolf3d_steps.tvmx  wolf3d_v2.tvmx  wolf3d_v2_clean.sym  wolf3d_v2_clean.tvmx  wolf3d_v2_debug.tvmx
instances/symbolic-system-grammars/TriskeleToolchain/vscode-triskele/: install-extension.bat  language-configuration.json  package.json
instances/symbolic-system-grammars/TriskeleToolchain/vscode-triskele/syntaxes/: tasm.tmLanguage.json
(+1833 files in other folders)
