[package]
name    = "triskele-vm-wasm"
version = "0.3.11"
edition = "2021"
authors = ["Echopraxium with the collaboration of Claude AI"]

[lib]
crate-type = ["cdylib"]

[dependencies]
triskele-vm    = { path = "../triskele-vm", default-features = false }
triskele-common = { path = "../triskele-common" }
wasm-bindgen   = "0.2"
js-sys         = "0.3"
anyhow         = "1"

[dependencies.web-sys]
version  = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
]

[profile.release]
opt-level = "s"   # minimize .wasm size

[ workspace ]
