[package]
name    = "triskele-vm-wasm"
version = "0.3.14"
edition = "2021"
authors = ["Echopraxium with the collaboration of Claude AI"]

[lib]
crate-type = ["cdylib"]

[dependencies]
triskele-vm     = { path = "../triskele-vm", default-features = false }
triskele-common = { path = "../triskele-common" }
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
anyhow               = "1"

[dependencies.web-sys]
version  = "0.3"
features = [
    # existing
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    # step 2 — worker + SAB + postMessage
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "EventListener",
    "EventTarget",
    "HtmlInputElement",
    "HtmlButtonElement",
    "KeyboardEvent",
    # SharedArrayBuffer / Atomics via js-sys (not web-sys features)
    # — accessed through js_sys::SharedArrayBuffer, js_sys::Atomics
]

[profile.release]
opt-level = "s"   # minimise .wasm size

[ workspace ]
