[package]
name    = "triskele-vm"
version.workspace = true
edition = "2021"
authors = ["Echopraxium with the collaboration of Claude AI"]
build   = "build.rs"

[[bin]]
name = "tskvm"
path = "src/main.rs"
required-features = ["native"]

[features]
default  = ["native"]
native   = ["dep:sdl2", "dep:libloading"]

[dependencies]
triskele-common = { path = "../triskele-common" }
anyhow          = { workspace = true }
clap            = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }
sdl2            = { workspace = true, optional = true }
libloading      = { workspace = true, optional = true }
