[package]
name    = "tsk-cc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "tsk-cc"
path = "src/main.rs"

[dependencies]
triskele-common = { workspace = true }
anyhow          = { workspace = true }
clap            = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }
