[package]
name        = "tsk-dbg"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
description = "DAP-compatible debugger for TriskeleVM (.tvmx binaries)"

[[bin]]
name = "tsk-dbg"
path = "src/main.rs"

[dependencies]
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
clap.workspace       = true
anyhow.workspace     = true
thiserror.workspace  = true
log.workspace        = true
env_logger.workspace = true
triskele-common.workspace = true

[features]
sdl2 = []
