[package]
name    = "triskele-vm"
version.workspace = true
edition = "2021"
authors = ["Echopraxium with the collaboration of Claude AI"]
build   = "build.rs"

[[bin]]
name = "tskvm"
path = "src/main.rs"

[dependencies]
triskele-common = { path = "../triskele-common" }
anyhow          = { workspace = true }
clap            = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }
sdl2            = { workspace = true }
libloading      = { workspace = true }
