[package]
name = "tsk-lib-dos-gen"
version = "0.1.0"
edition = "2021"
authors = ["Echopraxium"]
description = "Generates tsk-lib-dos.tvml (pure .tvml library for DOS compatibility)"

[dependencies]
triskele-common = { path = "../triskele-common" }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }