[package]
name    = "tsk-asm"
version = "0.2.0"
edition = "2021"
authors = ["Echopraxium with the collaboration of Claude AI"]

[[bin]]
name = "tsk-asm"
path = "src/main.rs"

[dependencies]
triskele-common = { path = "../triskele-common" }
anyhow          = { workspace = true }
clap            = { workspace = true }
log             = { workspace = true }
env_logger      = { workspace = true }

[dev-dependencies]
triskele-vm = { path = "../triskele-vm" }
