[package]
name             = "tsk-libc-gen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description       = "tsk-libc-gen — generates tsk-libc.tvml (pure .tvml library for TriskeleVM)"

[dependencies]
triskele-common = { workspace = true }
anyhow          = { workspace = true }
clap            = { workspace = true }
