[package]
name    = "tsk-link"
version.workspace = true
edition = "2021"
authors = ["Echopraxium with the collaboration of Claude AI"]

[[bin]]
name = "tsk-link"
path = "src/main.rs"

[dependencies]
triskele-common = { workspace = true }
anyhow = { workspace = true }
clap   = { workspace = true }
log    = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tempfile = "3"
